feat!: major update to suit B&D workflow

--- a/public/options.html
+++ b/public/options.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Fake Filler 2 Options</title>
+    <script
+      src="https://sentry.buckhamduffy.com/js-sdk-loader/c507aad6816593199eb18af35c97d3f1.min.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="build/options.css" />
     <link rel="shortcut icon" href="images/icon-32.png" />
   </head>
